fix: Display hamburger menu on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -82,6 +82,7 @@ content: "";
     }
 
     svg {
+    display: block;
     width: 40px;
     fill: #000;
     }
